More template changes.
Fixed sample template, looks descent. Modifying editor so it can fit
page. Probably going to just have client "render" page then upload back
to server for hosting. NEED TO ADD SECURITY!!!!

--- a/aro_quiver/admin/pages/background.html
+++ b/aro_quiver/admin/pages/background.html
@@ -6,6 +6,7 @@
         <title>Aro Editor</title>
 
         <link href="../main.css" rel="stylesheet" />
+        <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="index.js"></script>
 
     </head>
@@ -32,7 +33,18 @@
         </header>
 
 
-        <main></main> <!-- Rendered view of webpage goes in here. iFrame? -->
+        <main>
+            <iframe src="sample-template/index.html"></iframe>
+        </main> <!-- Rendered view of webpage goes in here. iFrame? -->
+
+        <script>
+
+            //Load iframe, adjust size.
+
+            $("iframe").width($("iframe").scrollWidth())
+
+        </script>
+
     </body>
 
 </html>
