--- a/aro_quiver/admin/pages/sample-template/index.html
+++ b/aro_quiver/admin/pages/sample-template/index.html
@@ -36,9 +36,17 @@
                         <h2>Blog Under Construction</h2>
                         <p>Hello.</p>
                     </article>
-                </section>
 
+                    <article>
+                        <h2>Blog Under More Construction</h2>
+                        <p>Yeah.</p>
+                    </article>
+
+                </section>
             </main>
+
+            <aside class="right" style="width: calc( 100% - 950px); min-width: 0px;"></aside>
+
         </content>
 
     </body>
