--- a/aro_quiver/admin/pages/background.html
+++ b/aro_quiver/admin/pages/background.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
@@ -7,6 +7,8 @@
 
         <link href="../main.css" rel="stylesheet" />
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+
         <script src="clientadmin.js"></script>
 
     </head>
