--- a/aro_quiver/admin/public/background.html
+++ b/aro_quiver/admin/public/background.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <title>Aro Editor</title>
 
-        <link href="../main.css" rel="stylesheet" />
+        <link href="main.css" rel="stylesheet" />
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
 
@@ -18,24 +18,24 @@
             <aside id="toolbar">
                 <nav>
                     <ul>
-                        <li style="background-image: url('../icons/sidebar/edit.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/home.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/pages.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/add.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/media.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/permissions.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/users.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/settings.png')"></li>
-                        <li style="background-image: url('../icons/sidebar/help.png')"></li>
+                        <li style="background-image: url('icons/sidebar/edit.png')"></li>
+                        <li style="background-image: url('icons/sidebar/home.png')"></li>
+                        <li style="background-image: url('icons/sidebar/pages.png')"></li>
+                        <li style="background-image: url('icons/sidebar/add.png')"></li>
+                        <li style="background-image: url('icons/sidebar/media.png')"></li>
+                        <li style="background-image: url('icons/sidebar/permissions.png')"></li>
+                        <li style="background-image: url('icons/sidebar/users.png')"></li>
+                        <li style="background-image: url('icons/sidebar/settings.png')"></li>
+                        <li style="background-image: url('icons/sidebar/help.png')"></li>
                     </ul>
                 </nav>
             </aside>
 
             <aside class="actions">
                 <ul>
-                    <li style="background-image: url('../icons/pages/refresh.png')"></li>
-                    <li style="background-image: url('../icons/pages/upload.png')"></li>
-                    <li style="background-image: url('../icons/pages/delete.png')"></li>
+                    <li style="background-image: url('icons/pages/refresh.png')"></li>
+                    <li style="background-image: url('icons/pages/upload.png')"></li>
+                    <li style="background-image: url('icons/pages/delete.png')"></li>
                 </ul>
             </aside>
 
@@ -44,7 +44,7 @@
 
 
         <main class="hide">
-            <iframe src="sample-template/index.html" class="hidden"></iframe>
+            <iframe src="/pages/index.html" class="hidden"></iframe>
         </main> <!-- Rendered view of webpage goes in here. iFrame? -->
 
         <div class="modal hide">
