Added template loading and re-routed the compiled pages so the index page is actually being hosted.

--- a/aro_quiver/compiler/public/pages/index.html
+++ b/aro_quiver/compiler/public/pages/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Aro Sample</title>
-        <link href="./index.css" rel="stylesheet" />
+        <link href="/resources/index.css" rel="stylesheet" />
     </head>
 
     <body>
