--- a/aro_quiver/admin/public/index.html
+++ b/aro_quiver/admin/public/index.html
@@ -3,9 +3,121 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Aro Balistaria</title>
+
+    <link href="main.css" rel="stylesheet" />
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+
+    <script src="clientadmin.js"></script>
+
+    <link rel="stylesheet" href="shepherd-theme-arrows.css" />
+	<script src="shepherd.min.js"></script>
+
 </head>
 <body>
+    <header>
+        <aside id="toolbar" class="fakeHover">
+            <nav>
+                <ul>
 
+                    <li id="home" style="background-image: url('icons/sidebar/home.png')"
+                  	onclick="window.location.assign('index.html');"></li>
+                    <li id="edit" style="background-image: url('icons/sidebar/edit.png')"
+                    onclick="window.location.assign('background.html');"></li>
+                    <li id="pages" style="background-image: url('icons/sidebar/pages.png')"></li>
+                    <li id="add" style="background-image: url('icons/sidebar/add.png')"></li>
+                    <li id="media" style="background-image: url('icons/sidebar/media.png')"></li>
+                    <li id="permissions" style="background-image: url('icons/sidebar/permissions.png')"></li>
+                    <li id="users" style="background-image: url('icons/sidebar/users.png')"></li>
+                    <li id="settings" style="background-image: url('icons/sidebar/settings.png')"></li>
+                    <li id="help" style="background-image: url('icons/sidebar/help.png')"></li>
+                </ul>
+            </nav>
+        </aside>
+      
+
+        <aside id="logo"><a>a</a>ro</aside>
+    </header>
+
+    <main style="text-align: center; position: relative; margin-top: 10vw;">
+    		<h1 style="font-family: Genosans; font-size: 5em;">Welcome</h1>
+
+            <a class="homeButton" onclick="window.location.assign('background.html');">Get Started Editing</a><br><br>
+            
+            <a class="homeButton" onclick="tour.start();">Take a Tour</a>
+     </main>
+
+     <script>
+		//var tour;
+		tour = new Shepherd.Tour({
+			defaults: {
+				classes: 'shepherd-theme-arrows',
+				scrollTo: true
+			}
+		});
+
+		tour.addStep('Home', {
+		  title: 'The Home Button',
+		  text: 'Every site needs a home button, and this little house is ours. He will reliably take you back to where you truly belong.',
+		  attachTo: '#home bottom',
+		  advanceOn: '.docs-link click'
+		});
+
+		tour.addStep('Edit', {
+		  title: 'The Editor',
+		  text: 'Ready to build and edit your site? Well with this button we are too. Click here to visit the editor.',
+		  attachTo: '#edit bottom',
+		  advanceOn: '.docs-link click'
+		});
+		tour.addStep('pages', {
+		  title: 'Page Overview',
+		  text: 'You have probably built some sort of magnificant website in seconds already, so to help you see all you have done this will list the contents of your site!',
+		  attachTo: '#pages bottom',
+		  advanceOn: '.docs-link click'
+		});
+
+		tour.addStep('add', {
+		  title: 'Add Pages',
+		  text: 'Want to make something new? Then go right ahead with our easy to use page creator/adder.',
+		  attachTo: '#add bottom',
+		  advanceOn: '.docs-link click'
+		});
+
+		tour.addStep('media', {
+		  title: 'Image Wizard',
+		  text: 'With a world of many media objects around us, you will need a hefty media manager like ours to truly make the best of your videos, images, and other uploads.',
+		  attachTo: '#media bottom',
+		  advanceOn: '.docs-link click'
+		});
+
+		tour.addStep('permissions', {
+		  title: 'Permission-izer',
+		  text: 'This gizmo allows you to manage some nitty gritty plug-in details, not for the faint of heart.',
+		  attachTo: '#users bottom',
+		  advanceOn: '.docs-link click'
+		});
+
+		tour.addStep('users', {
+		  title: 'User Management',
+		  text: 'Users are what make your site tick, besides you of course. So we have made it easy. Visit here to edit how your users interface with your site.',
+		  attachTo: '#users bottom',
+		  advanceOn: '.docs-link click'
+		});
+
+		tour.addStep('settings', {
+		  title: 'Toolbox',
+		  text: 'Need to go under the hood, manage your plug-ins, or do other such things? Then click right here to get started.',
+		  attachTo: '#settings bottom',
+		  advanceOn: '.docs-link click'
+		});
+
+		tour.addStep('help', {
+		  title: '?',
+		  text: 'Any questions? Our intuitive and exhaustive help resources should get you through even the most confusing operations.',
+		  attachTo: '#help bottom',
+		  advanceOn: '.docs-link click'
+		});
+     </script>
 </body>
 </html>
