--- a/aro_quiver/admin/public/background.html
+++ b/aro_quiver/admin/public/background.html
@@ -33,9 +33,9 @@
 
             <aside class="actions">
                 <ul>
-                    <li style="background-image: url('icons/pages/refresh.png')"></li>
+                    <li style="background-image: url('icons/pages/refresh.png')" onclick="view.loadData()"></li>
                     <li style="background-image: url('icons/pages/upload.png')" onclick="view.upload()"></li>
-                    <li style="background-image: url('icons/pages/delete.png')" onclick="view.loadData()"></li>
+                    <li style="background-image: url('icons/pages/launch.png')" onclick="window.open('/' + editingpage)"></li>
                 </ul>
             </aside>
 
