--- a/aro_quiver/admin/public/index.html
+++ b/aro_quiver/admin/public/index.html
@@ -41,7 +41,7 @@
     <main style="text-align: center; position: relative; margin-top: 10vw;">
     		<h1 style="font-family: Genosans; font-size: 5em;">Welcome</h1>
 
-            <a class="homeButton" onclick="window.location.assign('background.html?page=index.html');">Get Started Editing</a><br><br>
+            <a class="homeButton" onclick="window.location.assign('editor.html?page=index.html');">Get Started Editing</a><br><br>
             
             <a class="homeButton" onclick="tour.start();">Take a Tour</a>
      </main>
