--- a/aro_quiver/admin/public/index.html
+++ b/aro_quiver/admin/public/index.html
@@ -22,7 +22,7 @@
                     <li id="home" style="background-image: url('icons/sidebar/home.png')"
                   	onclick="window.location.assign('index.html');"></li>
                     <li id="edit" style="background-image: url('icons/sidebar/edit.png')"
-                    onclick="window.location.assign('background.html');"></li>
+                    onclick="window.location.assign('editor.html?page=index.html');"></li>
                     <li id="pages" style="background-image: url('icons/sidebar/pages.png')"></li>
                     <li id="add" style="background-image: url('icons/sidebar/add.png')"></li>
                     <li id="media" style="background-image: url('icons/sidebar/media.png')"></li>
@@ -39,7 +39,7 @@
     </header>
 
     <main style="text-align: center; position: relative; margin-top: 10vw;">
-    		<h1 style="font-family: Genosans; font-size: 5em;">Welcome</h1>
+    		<h1 style="font-family: Genosans; font-size: 5em; color: #FFF; font-weight: 100;">Welcome</h1>
 
             <a class="homeButton" onclick="window.location.assign('editor.html?page=index.html');">Get Started Editing</a><br><br>
             
