--- a/aro_quiver/compiler/public/pages/index.html
+++ b/aro_quiver/compiler/public/pages/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
-<head></head><body><p>Hi how are you?</p></body>
+<head><meta charset="utf-8"><title>Aro Sample</title><link href="/resources/index.css" rel="stylesheet"></head><body><content><aside><ul><li>Home</li><li>About</li><li>Awesome</li><li>Writings</li><li>Research</li></ul></aside><main><header><h1>The Test</h1><div class="details">R.J Genlson PHD. MD.</div></header><figure class="left">Main image.</figure><aside class="right social"><h2>Connect With Me</h2></aside><section class="left"><article><h2>Title</h2><p>Hello.</p></article><article><h2>Blog Under More Construction</h2><p><p><strong>More complex passages can be written here.</strong></p></p></article></section></main><aside class="right" style="width:calc( 100% - 950px);min-width:0px;"></aside></content>
+</body>
 </html>
