Time for the demo.

--- a/aro_quiver/admin/public/add.html
+++ b/aro_quiver/admin/public/add.html
@@ -74,7 +74,7 @@
                 <nav>
                     <ul>
                         <li style="background-image: url('icons/sidebar/pages.png')"></li>
-                        <li style="background-image: url('icons/sidebar/edit.png')" onclick="window.location='edit.html'"></li>
+                        <li style="background-image: url('icons/sidebar/edit.png')" onclick="window.location='editor.html'"></li>
                         <li style="background-image: url('icons/sidebar/home.png')" onclick="window.location='index.html'"></li>
                         <li style="background-image: url('icons/sidebar/add.png')"></li>
                         <li style="background-image: url('icons/sidebar/media.png')"></li>
