--- a/aro_quiver/admin/public/editor.html
+++ b/aro_quiver/admin/public/editor.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
@@ -23,7 +23,7 @@
                         <li style="background-image: url('icons/sidebar/edit.png')"></li>
                         <li style="background-image: url('icons/sidebar/home.png')" onclick="window.location='index.html'"></li>
                         <li style="background-image: url('icons/sidebar/pages.png')"></li>
-                        <li style="background-image: url('icons/sidebar/add.png')"></li>
+                        <li style="background-image: url('icons/sidebar/add.png')" onclick="window.location='add.html'"></li>
                         <li style="background-image: url('icons/sidebar/media.png')"></li>
                         <li style="background-image: url('icons/sidebar/permissions.png')"></li>
                         <li style="background-image: url('icons/sidebar/users.png')"></li>
