--- a/aro_quiver/admin/public/index.html
+++ b/aro_quiver/admin/public/index.html
@@ -24,7 +24,7 @@
                     <li id="edit" style="background-image: url('icons/sidebar/edit.png')"
                     onclick="window.location.assign('editor.html?page=index.html');"></li>
                     <li id="pages" style="background-image: url('icons/sidebar/pages.png')"></li>
-                    <li id="add" style="background-image: url('icons/sidebar/add.png')"></li>
+                    <li id="add" style="background-image: url('icons/sidebar/add.png')" onclick="window.location='add.html'"></li>
                     <li id="media" style="background-image: url('icons/sidebar/media.png')"></li>
                     <li id="permissions" style="background-image: url('icons/sidebar/permissions.png')"></li>
                     <li id="users" style="background-image: url('icons/sidebar/users.png')"></li>
