--- a/aro_quiver/compiler/public/pages/index.html
+++ b/aro_quiver/compiler/public/pages/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head><meta charset="utf-8"><title>Aro Sample</title><link href="/resources/index.css" rel="stylesheet"></head><body><content><aside><ul><li>Home</li><li>About</li><li>Things</li><li>Writings</li><li>Research</li></ul></aside><main><header><h1>The Test</h1><div class="details"><ul>
-<li>R.J Genlson PHD. MD.</li>
-</ul></div></header><figure class="left">Main image.</figure><aside class="right social"><h2>Connect With Us</h2></aside><section class="left"><article><h2>Title</h2><p>Hello.</p></article><article><h2><p>Blog Under More Construction</p></h2><p></p><p><strong></strong></p><p><strong><em></em></strong></p><p style="text-align: right;"><strong><em>More complex passages can be written<em> here.</em></em></strong></p><p></p><p></p><p></p></article></section></main><aside class="right" style="width:calc( 100% - 950px);min-width:0px;"><h1><em>HI HI HI!</em></h1></aside></content>
+<head>
+        <meta charset="utf-8">
+        <title>Aro Sample</title>
+        <link href="/resources/index.css" rel="stylesheet">
+    </head>
 
+    <body>
+        <content>
+            <aside>
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Acedemics</li>
+                    <li>Writings</li>
+                    <li>Research</li>
+                </ul>
+            </aside>
 
+            <main>
+                <header>
+                    <h1>The Journey</h1>
+                    <div class="details">R.J Genlson PHD. MD.</div>
+                </header>
+
+                <figure class="left">Main image.</figure>
+
+                <aside class="right social">
+                    <h2>Connect With Me</h2>
+                </aside>
+
+                <section class="left">
+                    <article>
+                        <h2>Blog Under Construction</h2>
+                        <p>Hello.</p>
+                    </article>
+
+                    <article>
+                        <h2>Blog Under More Construction</h2>
+                        <p>Yeah.</p>
+                    </article>
+
+                </section>
+            </main>
+
+            <aside class="right" style="width: calc( 100% - 950px); min-width: 0px;"></aside>
+
+        </content>
+
+    
 
 </body>
 </html>
